assets/sass/custom.sass
// Custom SASS overrides for QGIS India User Group
// This file contains minimal customizations to the theme

// Override: Remove advanced features not used by India UG
// The new theme includes carousel, download, and payrexx components we don't need
// This is handled by the theme's component system

// Override: Hero section image styling for India UG
.hero-image
  .hero-container
    img
      max-width: calc(min(50vw, 200px))
      margin-bottom: 60px

// Override: Custom ul color for better readability
.content ul
  color: #4d6370

// Override: Context menu navbar styling
.context-container
  .navbar
    background-color: unset
    min-height: 3em

  .navbar-burger
    color: #fff
    margin-left: unset
    width: 3em
    height: 3em

  .navbar-start
    .navbar-item
      color: white
      border-radius: 5px

    .navbar-item, .nabar-link
      padding: 0.5rem .75rem

    a.navbar-item.is-active,
    .navbar-link.is-active,
    .navbar-item
      color: white
      background-color: unset
      &:hover
        color: #0a0a0a
        background-color: #fafafa

    .navbar-link
      color: inherit
      border-radius: 5px

  .navbar-brand,
  .navbar-tabs
    min-height: unset
    a:hover
      color: #fff

  input
    background: #223745
    border: none
    width: 100%
    color: #f3f3f3
    padding: 0.5rem 0.75rem
    border-radius: 290486px
    &::placeholder
      color: #f3f3f3
      opacity: 0.3
    &:hover
      border: none
    &:focus
      background: #fff

  @media screen and (min-width: 1024px)
    .navbar-start
      padding: 10px 0
      .navbar-dropdown
        background-color: #002033
        border: none

  @media screen and (max-width: 1023px)
    .container
      max-width: unset
    .box
      padding: 1.25rem 1rem 1.25rem 0rem
    .navbar-menu
      background-color: #002033
      min-width: 150px
      padding: 1rem
      &.is-active
        display: block
        position: fixed
        height: calc(100% - 112px)
        overflow: auto
        left: 0
        animation: slideInFromLeft 0.3s ease-out forwards
      &:not(.is-active)
        animation: slideOutToLeft 0.3s ease-out forwards

    @keyframes slideInFromLeft
      from
        transform: translateX(-100%)
        opacity: 0
      to
        transform: translateX(0)
        opacity: 1

    @keyframes slideOutToLeft
      from
        transform: translateX(0)
        opacity: 1
      to
        transform: translateX(-100%)
        opacity: 0

    .context-container .navbar-start a.navbar-item.is-active:hover,
    .context-container .navbar-start .navbar-link.is-active:hover,
    .context-container .navbar-start .navbar-item:hover
      background-color: unset !important
      color: white !important

    .content > .columns .content
      width: 100%

  @media screen and (min-width: 1408px)
    .search-control
      margin-right: 60px

// Override: Box padding for mobile
@media screen and (max-width: 1023px)
  .box
    padding: 1.25rem 1rem 1.25rem 0rem

